<resources>
    <string name="app_name">Tech Wired</string>
    <string name="tv_text_author">By Bill Russels</string>
    <string name="tv_text_read_more">Read More</string>
    <string name="text_no_item">No List Available</string>
    <string name="text_official_website">OFFICIAL WEBSITE</string>
    <string name="text_publisher">BBC News</string>
    <string name="text_navigate_to_portfolio">https://refriansyari.wixsite.com/refriansyari</string>
    <string name="text_navigate_to_linkedIn">https://www.linkedin.com/in/refriansyari/</string>
    <string name="text_headline_title">US is engaging in high-level diplomacy to avoid vetoing a UN resolution on critical aid for Gaza</string>
    <string name="text_headline_desc">UNITED NATIONS (AP) - The United States, key allies and Arab nations engaged adsfsadfadsfasfasdfasdf in veto aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasadasdasdadaasdfgasfasdfadsfdsfsfasdfasdfasff</string>
    <string name="text_content">UNITED NATIONS (AP) - The United States, key allies and Arab nations engaged adsfsadfadsfasfasdfasdf in veto aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasadasdasdadaasdfgasfasdfadsfdsfsfasdfasdfasff UNITED NATIONS (AP) - The United States, key allies and Arab nations engaged adsfsadfadsfasfasdfasdf in veto aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasadasdasdadaasdfgasfasdfadsfdsfsfasdfasdfasff UNITED NATIONS (AP) - The United States, key allies and Arab nations engaged adsfsadfadsfasfasdfasdf in veto aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasadasdasdadaasdfgasfasdfadsfdsfsfasdfasdfasff</string>
</resources>