<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_marginBottom="2dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_headline_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/font_light_black"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/text_headline_title" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                android:textColor="@color/font_light_black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_headline_title"
                tools:text="@string/tv_text_author" />

            <TextView
                android:id="@+id/tv_publish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="4dp"
                android:drawableTint="@color/font_light_grey"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                android:textColor="@color/font_light_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_author"
                tools:text="12 Desember 2023" />

            <TextView
                android:id="@+id/tv_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:layout_marginStart="8dp"
                android:drawableTint="@color/font_light_grey"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                android:textColor="@color/font_light_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_publish_date"
                app:layout_constraintTop_toTopOf="@id/tv_publish_date"
                android:text="|" />

            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:layout_marginStart="8dp"
                android:drawableTint="@color/font_light_grey"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                android:textColor="@color/font_light_grey"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/tv_divider"
                app:layout_constraintTop_toTopOf="@id/tv_publish_date"
                tools:text="BBC News" />

            <ImageView
                android:id="@+id/iv_headline_picture"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_test_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_publish_date"/>

            <TextView
                android:id="@+id/tv_headline_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                android:textColor="@color/font_light_grey"
                android:textSize="14dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_headline_picture"
                tools:text="@string/text_headline_desc" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                android:textColor="@color/font_dark_grey"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_headline_description"
                tools:text="@string/text_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                    android:id="@+id/btn_official_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:background="@drawable/bg_button"
                    android:text="@string/text_official_website" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>